# latbubble

./: LICENSE.md  README.md  pyproject.toml
examples/: seperatrix_sub_simulations.py  simulation_with_bubble_data_saving.py  simulation_with_plotting.py
src/latbubble/core/: counterterms.py  integrators.py  laplacians.py
src/latbubble/utils/: colour_test.py  io.py  noise.py  plotting.py
