[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latbubble"
version = "0.1.0"
description = "3D scalar-field lattice simulation utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "h5py"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
